# GeoPlot-Qt

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  GEOPLOT.pro  GeoGraphicsView.cpp  GeoGraphicsView.h  GeoScene.cpp  GeoScene.h  ItemGroup.cpp  ItemGroup.h  NOTES.md  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
